--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -5,11 +5,11 @@
   <div class="text-end">
     <button
       type="button"
-      class="btn btn-primary"
+      class="btn food-btn"
       data-bs-toggle="modal"
-      data-bs-target="#addSubject" (click)="openAdd()"
+      data-bs-target="#addCate" 
     >
-      Add Categories
+      Add Category
     </button>
   </div>
   <div class="row border-bottom">
@@ -27,7 +27,7 @@
     </div>
     <div class="col-3">
       <p>
-       <a class="btn-link btn" (click)="setSubject(item)"> View</a>
+       <a class="btn-link btn" routerLink="/dashboard/subcate"> View</a>
       </p>
     </div>
     <div class="col-5">
@@ -51,7 +51,7 @@
 <!--add subject Modal -->
 <div
   class="modal fade"
-  id="addSubject"
+  id="addCate"
   tabindex="-1"
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
@@ -60,8 +60,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">
-          <span *ngIf="OperationName=='Add'">Add</span> <span *ngIf="OperationName=='Edit'">Edit</span>
-          Subject
+          Add
+          Categories
         </h1>
         <button
           type="button"
@@ -73,7 +73,7 @@
       <div class="modal-body">
         <form [formGroup]="addSubjectForm" (ngSubmit)="addSubject()">
           <div class="mb-3">
-            <label for="title" class="form-label">Subject</label>
+            <label for="title" class="form-label">Name</label>
             <input
               type="text"
               class="form-control"
@@ -85,8 +85,7 @@
           <div *ngIf="getControl['name'].touched && getControl['name'].invalid" class="text-danger">
             <div *ngIf="getControl['name'].errors?.['required']">Name is required.</div>
         </div>
-          <button type="submit"   *ngIf="OperationName == 'Add'"  data-bs-dismiss="modal" class="btn btn-primary">Add</button>
-          <button type="button"  *ngIf="OperationName == 'Edit'"  data-bs-dismiss="modal" (click)="updateSubject()" class="btn btn-primary">Update</button>
+          <button type="submit"    data-bs-dismiss="modal" class="btn btn-primary">Add</button>
         </form>
       </div>
       <!-- <div class="modal-footer">
