--- a/src/app/components/categories/sub-cate/sub-cate.component.html
+++ b/src/app/components/categories/sub-cate/sub-cate.component.html
@@ -30,7 +30,7 @@
     </div>
     <div class="col-3">
       <p>
-        <a class="btn-link btn" > View</a>
+        <a class="btn-link btn" routerLink="/dashboard/product"> View</a>
       </p>
     </div>
     <div class="col-5">
