--- a/src/app/components/categories/categories.component.html
+++ b/src/app/components/categories/categories.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="text-center">
+  <div class="text-center mt-3">
     <h2>Categories</h2>
   </div>
   <div class="text-end">
