--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -8,7 +8,7 @@
   <a mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard">
     <mat-icon class="ms-2">home</mat-icon> Deshboard
   </a>
-  <a mat-list-item routerLink="/dashboard/categories"><mat-icon class="ms-2">arrow_right_alt  </mat-icon>Food Categories</a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard/categories"><mat-icon class="ms-2">arrow_right_alt  </mat-icon>Food Categories</a>
   <!-- <mat-accordion>
     <mat-expansion-panel
       (opened)="panelOpenState = true"
@@ -23,5 +23,8 @@
       <a mat-list-item> <mat-icon> chevron_right </mat-icon>Pending Orders</a>
     </mat-expansion-panel>
   </mat-accordion>  -->
-  <a mat-list-item ><mat-icon class="ms-2">arrow_right_alt  </mat-icon>Coupons</a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/dashboard/coupon"><mat-icon class="ms-2">arrow_right_alt  </mat-icon>Coupons</a>
+  <a mat-list-item routerLinkActive="list-item-active"><mat-icon class="ms-2">arrow_right_alt  </mat-icon>Orders</a>
+  <a mat-list-item routerLinkActive="list-item-active"><mat-icon class="ms-2">arrow_right_alt  </mat-icon>Customer List</a>
+  <a mat-list-item routerLinkActive="list-item-active"><mat-icon class="ms-2">arrow_right_alt  </mat-icon>Vendor List</a>
 </mat-nav-list>
