--- a/src/app/components/categories/categories.component.scss
+++ b/src/app/components/categories/categories.component.scss
@@ -5,3 +5,25 @@ button {
     background-color:#1B4418 ;
     color: #fff;
   }
+  .textcolor{
+color: #1B4418;
+  }
+  .header{margin: 1rem 0;
+  }
+  .tabledata{
+    background-color: #fff;
+    margin-top: 1rem ;
+    padding: 1rem;
+    border-radius: 20px;
+  }
+  .images{
+    width: 3rem;
+  height: 3rem;
+  margin: 0.5rem 0;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  }
+  .links{
+    color: #1B4418;
+  }
