--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -30,6 +30,11 @@
     }
   }
 }
+.active{
+  background-color: #10390d;
+  color: #fff;
+
+}
 .mat-subheader {
   color: #818cf8;
   font-size: 0.6rem;
