--- a/src/app/components/categories/sub-cate/product/product.component.html
+++ b/src/app/components/categories/sub-cate/product/product.component.html
@@ -1,63 +1,91 @@
 <div class="container">
-  <a routerLink="/dashboard/subcate">Back</a>
-  <div class="text-center">
-    <h2>Products</h2>
-  </div>
-  <div class="text-end my-3">
-    <button
-      type="button"
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#addQuestion"
-    >
-      Add Product
-    </button>
-  </div>
-  <div class="my-3">
-    <h5>Categories  : Dairy</h5>
-    <h5>Sub-Categories : Milk</h5>
-  </div>
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="questions">
-      <!-- Position Column -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element = index">{{ element + 1 }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="question">
-        <th mat-header-cell *matHeaderCellDef>Product</th>
-        <td mat-cell *matCellDef="let element">{{ element.question }}</td>
-      </ng-container>
-      <ng-container matColumnDef="answer">
-        <th mat-header-cell *matHeaderCellDef>Price</th>
-        <td mat-cell *matCellDef="let element">{{ element.answer }}</td>
-      </ng-container>
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>action</th>
-        <td mat-cell *matCellDef="let element; let i = index">
+  <div class="header">
+    <div class="row g-2">
+      <div class="col-7">
+        <h4 class="textcolor">
           <a
-            class="btn-link btn"
-            data-bs-toggle="modal"
-            data-bs-target="#editQuestion"(click)="editHeading(i,element._id)"
-            >Edit</a
-          >/<a
-            class="btn-link btn"
-           (click)="deleteQuestion(element._id)"
-            >Delete</a
+            routerLink="/dashboard/categories"
+            class="text-decoration-none links"
+            >CATEGORIES /</a
           >
-        </td>
-        deleteTest
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
+          <a
+            routerLink="/dashboard/sub-cate"
+            class="text-decoration-none links"
+            > SUB-CATEGORIES /</a
+          >
+          PRODUCTS
+         
+        </h4>
+      </div>
+      <div class="col-2">
+        <button
+          type="button"
+          class="btn food-btn"
+          data-bs-toggle="modal"
+          data-bs-target="#addCate"
+        >
+          ADD PRODUCT
+        </button>
+      </div>
+      <div class="col-3 ms-auto">
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn food-btn" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="tabledata">
+    <div class="row justify-content-start align-items-center">
+      <div class="col-1"><p class="textcolor">S.NO.</p></div>
+      <div class="col-2"><p class="textcolor">IMAGE</p></div>
+      <div class="col-3"><p class="textcolor">NAME</p></div>
+      <div class="col-3"><p class="textcolor">PRICE</p></div>
+      <div class="col-3"><p class="textcolor">ACTION</p></div>
+    </div>
+    <div class="row justify-content-start align-items-center" *ngFor="let item of pageSlice; let i = index">
+      <div class="col-1">
+        <span>{{ i + 1 }}</span>
+      </div>
+      <div class="col-2">
+       
+        <img [src]="item.img" class="images" alt="">
+    
+      </div>
+      <div class="col-3">
+        <span>{{ item.name }}</span>
+      </div>
+      <div class="col-3">
+        <span>{{ item.price }}</span>
+       
+      </div>
+      <div class="col-3">
+        <!-- <button mat-raised-button (click)="openDialog('0ms', '0ms')">Open dialog</button> -->
+        <a class="links" >Delete</a>/
+        <a
+        class="links"
+         
+          data-bs-toggle="modal"
+          data-bs-target="#addSubject"
+          >Edit</a
+        >
+      </div>
+    </div>
     <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements"
+      (page)="handlePageEvent($event)"
+      [length]="headingData.length"
+      [pageSize]="pageSize"
+      [showFirstLastButtons]="showFirstLastButtons"
+      [pageSizeOptions]="pageSizeOptions"
+      [pageIndex]="pageIndex"
+      aria-label="Select page"
     >
     </mat-paginator>
   </div>
@@ -82,7 +110,7 @@
         ></button>
       </div>
       <div class="modal-body">
-        <form [formGroup]="questionForm" (ngSubmit)="addQuestion()">
+        <!-- <form [formGroup]="questionForm" (ngSubmit)="addQuestion()"> -->
           <div class="mb-3">
             <label for="title" class="form-label">Product</label>
             <input
@@ -90,19 +118,10 @@
               class="form-control"
               id="title"
               aria-describedby="emailHelp"
-              formControlName="question"
+             
             />
           </div>
-          <div
-            *ngIf="
-              getControl['question'].touched && getControl['question'].invalid
-            "
-            class="text-danger"
-          >
-            <div *ngIf="getControl['question'].errors?.['required']">
-              Product is required.
-            </div>
-          </div>
+     
           <div class="mb-3">
             <label for="title" class="form-label">Price</label>
             <input
@@ -110,29 +129,20 @@
               class="form-control"
               id="title"
               aria-describedby="emailHelp"
-              formControlName="answer"
+            
             />
           </div>
-          <div
-            *ngIf="
-              getControl['answer'].touched && getControl['answer'].invalid
-            "
-            class="text-danger"
-          >
-            <div *ngIf="getControl['answer'].errors?.['required']">
-              Price is required.
-            </div>
-          </div>
+       
 
           <button
             type="submit"
-            [disabled]="!questionForm.valid"
+         
             data-bs-dismiss="modal"
             class="btn btn-primary"
           >
             Add
           </button>
-        </form>
+        <!-- </form> -->
       </div>
       <!-- <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -142,7 +152,7 @@
   </div>
 </div>
 <!--add news Modal -->
-<div
+<!-- <div
   class="modal fade"
   id="dsf"
   tabindex="-1"
@@ -213,10 +223,10 @@
           </button>
         </form>
       </div>
-      <!-- <div class="modal-footer">
+     <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary">Save changes</button>
-          </div> -->
+          </div> 
     </div>
   </div>
-</div>
+</div> -->
