--- a/src/app/components/coupon/coupon.component.html
+++ b/src/app/components/coupon/coupon.component.html
@@ -1,20 +1,31 @@
 <div class="container">
-  <div class="text-center mt-3">
-    <h2>Coupon</h2>
+  <div class="header">
+    <div class="row g-2">
+      <div class="col-2">
+        <h4 class="textcolor">COUPON</h4>
+      </div>
+      <div class="col-2">
+        <button type="button" class="btn food-btn">ADD COUPON</button>
+      </div>
+      <div class="col-3 ms-auto">
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn food-btn" type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
+      </div>
+    </div>
   </div>
-  <div class="text-end my-3">
-    <button
-      type="button"
-      class="btn food-btn"
-      data-bs-toggle="modal"
-      data-bs-target="#addCoupon"
-    >
-      Add Coupon
-    </button>
-  </div>
-  <div class="mat-elevation-z8">
+  
+  <!-- <div class="mat-elevation-z8">
     <table mat-table [dataSource]="questions">
-      <!-- Position Column -->
+    
       <ng-container matColumnDef="position">
         <th mat-header-cell *matHeaderCellDef>No.</th>
         <td mat-cell *matCellDef="let element">{{ element.position }}</td>
@@ -66,6 +77,69 @@
       aria-label="Select page of periodic elements"
     >
     </mat-paginator>
+  </div> -->
+ 
+  <div class="tabledata">
+    <div class="row justify-content-start align-items-center">
+      <div class="col"><p class="textcolor">S.NO.</p></div>
+      <div class="col"><p class="textcolor">NAME</p></div>
+      <div class="col"><p class="textcolor">AMOUT</p></div>
+      <div class="col"><p class="textcolor">CODE</p></div>
+      <div class="col"><p class="textcolor">DISCOUNT TYPE</p></div>
+      <div class="col"><p class="textcolor">START DATE</p></div>
+      <div class="col"><p class="textcolor">END DATE</p></div>
+      <div class="col"><p class="textcolor">ACTION</p></div>
+    </div>
+    <div class="row justify-content-start align-items-center" *ngFor="let item of pageSlice; let i = index">
+      <div class="col">
+        <span>{{item.position }}</span>
+      </div>
+      <div class="col">
+       
+       <span>{{item.name}}</span>
+    
+      </div>
+      <div class="col">
+        <span>{{ item.amount }}</span>
+      </div>
+      <div class="col">
+        <span>{{ item.code }}</span>
+       
+      </div>
+      <div class="col">
+        <span>{{ item.discount_type }}</span>
+       
+      </div>
+      <div class="col">
+        <span>{{ item.start_date }}</span>
+       
+      </div>
+      <div class="col">
+        <span>{{ item.end_date }}</span>
+       
+      </div>
+      <div class="col">
+        <!-- <button mat-raised-button (click)="openDialog('0ms', '0ms')">Open dialog</button> -->
+        <a class="links" >Delete</a>/
+        <a
+        class="links"
+         
+          data-bs-toggle="modal"
+          data-bs-target="#addSubject"
+          >Edit</a
+        >
+      </div>
+    </div>
+    <mat-paginator
+      (page)="handlePageEvent($event)"
+      [length]="couponData.length"
+      [pageSize]="pageSize"
+      [showFirstLastButtons]="showFirstLastButtons"
+      [pageSizeOptions]="pageSizeOptions"
+      [pageIndex]="pageIndex"
+      aria-label="Select page"
+    >
+    </mat-paginator>
   </div>
 </div>
 
@@ -96,7 +170,6 @@
             class="form-control"
             id="title"
             aria-describedby="emailHelp"
-           
           />
         </div>
         <div class="mb-3">
@@ -106,7 +179,6 @@
             class="form-control"
             id="title"
             aria-describedby="emailHelp"
-           
           />
         </div>
         <div class="mb-3">
@@ -116,7 +188,6 @@
             class="form-control"
             id="title"
             aria-describedby="emailHelp"
-           
           />
         </div>
         <div class="mb-3">
@@ -135,7 +206,6 @@
             class="form-control"
             id="title"
             aria-describedby="emailHelp"
-          
           />
         </div>
         <div class="mb-3">
@@ -145,7 +215,6 @@
             class="form-control"
             id="title"
             aria-describedby="emailHelp"
-          
           />
         </div>
 
