--- a/src/app/components/vender-list/vender-list.component.scss
+++ b/src/app/components/vender-list/vender-list.component.scss
@@ -2,10 +2,6 @@
   table {
     width: 100%;
   }
-  .food-btn {
-    background-color: #1b4418;
-    color: #fff;
-  }
   button {
     margin-right: 8px;
   }
@@ -42,4 +38,10 @@
   .links {
     color: #1b4418;
   }
+  .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+    background-color: #1b4418 !important;
+  }
+  .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+    background-color: #1b4418;
+    }
   
