--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,5 +6,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
    
      position: static; 
    
+
     }
+    .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
+    
+     background-color: #90c697;
+   }
+   .mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+     background-color: #1b4418;
+     }
 
